// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/DetailsContainer renders an initial view with the right panel 1`] = `
<div
  className="Details"
>
  <TabBar
    onChangeTabOrder={[Function]}
    onSelectTab={[Function]}
    selectedTabName="calltree"
    tabOrder={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ]
    }
    tabs={
      Array [
        Object {
          "name": "calltree",
          "title": "Call Tree",
        },
        Object {
          "name": "flame-graph",
          "title": "Flame Graph",
        },
        Object {
          "name": "stack-chart",
          "title": "Stack Chart",
        },
        Object {
          "name": "marker-chart",
          "title": "Marker Chart",
        },
        Object {
          "name": "marker-table",
          "title": "Marker Table",
        },
        Object {
          "name": "network-chart",
          "title": "Network",
        },
      ]
    }
  />
  <ProfileCallTreeView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(ProfileThreadHeaderContextMenu) />
</div>
`;

exports[`app/DetailsContainer renders an initial view with the right panel for tab calltree 1`] = `
<div
  className="Details"
>
  <TabBar
    onChangeTabOrder={[Function]}
    onSelectTab={[Function]}
    selectedTabName="calltree"
    tabOrder={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ]
    }
    tabs={
      Array [
        Object {
          "name": "calltree",
          "title": "Call Tree",
        },
        Object {
          "name": "flame-graph",
          "title": "Flame Graph",
        },
        Object {
          "name": "stack-chart",
          "title": "Stack Chart",
        },
        Object {
          "name": "marker-chart",
          "title": "Marker Chart",
        },
        Object {
          "name": "marker-table",
          "title": "Marker Table",
        },
        Object {
          "name": "network-chart",
          "title": "Network",
        },
      ]
    }
  />
  <ProfileCallTreeView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(ProfileThreadHeaderContextMenu) />
</div>
`;

exports[`app/DetailsContainer renders an initial view with the right panel for tab flame-graph 1`] = `
<div
  className="Details"
>
  <TabBar
    onChangeTabOrder={[Function]}
    onSelectTab={[Function]}
    selectedTabName="flame-graph"
    tabOrder={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ]
    }
    tabs={
      Array [
        Object {
          "name": "calltree",
          "title": "Call Tree",
        },
        Object {
          "name": "flame-graph",
          "title": "Flame Graph",
        },
        Object {
          "name": "stack-chart",
          "title": "Stack Chart",
        },
        Object {
          "name": "marker-chart",
          "title": "Marker Chart",
        },
        Object {
          "name": "marker-table",
          "title": "Marker Table",
        },
        Object {
          "name": "network-chart",
          "title": "Network",
        },
      ]
    }
  />
  <FlameGraphView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(ProfileThreadHeaderContextMenu) />
</div>
`;

exports[`app/DetailsContainer renders an initial view with the right panel for tab marker-chart 1`] = `
<div
  className="Details"
>
  <TabBar
    onChangeTabOrder={[Function]}
    onSelectTab={[Function]}
    selectedTabName="marker-chart"
    tabOrder={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ]
    }
    tabs={
      Array [
        Object {
          "name": "calltree",
          "title": "Call Tree",
        },
        Object {
          "name": "flame-graph",
          "title": "Flame Graph",
        },
        Object {
          "name": "stack-chart",
          "title": "Stack Chart",
        },
        Object {
          "name": "marker-chart",
          "title": "Marker Chart",
        },
        Object {
          "name": "marker-table",
          "title": "Marker Table",
        },
        Object {
          "name": "network-chart",
          "title": "Network",
        },
      ]
    }
  />
  <Connect(MarkerChart) />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(ProfileThreadHeaderContextMenu) />
</div>
`;

exports[`app/DetailsContainer renders an initial view with the right panel for tab marker-table 1`] = `
<div
  className="Details"
>
  <TabBar
    onChangeTabOrder={[Function]}
    onSelectTab={[Function]}
    selectedTabName="marker-table"
    tabOrder={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ]
    }
    tabs={
      Array [
        Object {
          "name": "calltree",
          "title": "Call Tree",
        },
        Object {
          "name": "flame-graph",
          "title": "Flame Graph",
        },
        Object {
          "name": "stack-chart",
          "title": "Stack Chart",
        },
        Object {
          "name": "marker-chart",
          "title": "Marker Chart",
        },
        Object {
          "name": "marker-table",
          "title": "Marker Table",
        },
        Object {
          "name": "network-chart",
          "title": "Network",
        },
      ]
    }
  />
  <Connect(MarkerTable) />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(ProfileThreadHeaderContextMenu) />
</div>
`;

exports[`app/DetailsContainer renders an initial view with the right panel for tab stack-chart 1`] = `
<div
  className="Details"
>
  <TabBar
    onChangeTabOrder={[Function]}
    onSelectTab={[Function]}
    selectedTabName="stack-chart"
    tabOrder={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ]
    }
    tabs={
      Array [
        Object {
          "name": "calltree",
          "title": "Call Tree",
        },
        Object {
          "name": "flame-graph",
          "title": "Flame Graph",
        },
        Object {
          "name": "stack-chart",
          "title": "Stack Chart",
        },
        Object {
          "name": "marker-chart",
          "title": "Marker Chart",
        },
        Object {
          "name": "marker-table",
          "title": "Marker Table",
        },
        Object {
          "name": "network-chart",
          "title": "Network",
        },
      ]
    }
  />
  <Connect(StackChartGraph) />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(ProfileThreadHeaderContextMenu) />
</div>
`;
